         See https://github.com/libretro/mame2003-plus-libretro/pull/8
         See https://github.com/libretro/mame2010-libretro/pull/123
         See https://github.com/libretro/mame2010-libretro/tree/master/metadata

WIP      Read-only Launcher (ROLs) to export into AEL.


[B]Advanced MAME Launcher | version 0.9.10 | xx May 2019[/B]

FEATURE  Management of MAME Favourite objects (delete missing, delete single).

FEATURE  Management of SL Favourite objects (delete missing, delete single).

FEATURE  Initial support for Retroarch MAME 2003 Plus core.

FEATURE  [CORE] Ability to export DAT files in Logiqx format for MAME ROMs and MAME CHDs.

FEATURE  [CORE] Differentiate between Non-merged and Fully non-merged MAME ROM sets.
         Non-merged sets do not include BIOS and device ROMs.
         Fully non-merged sets include BIOS and devices ROMs (every ROM required to run each
         machine). Pleasuredome ROM sets are Fully non-merged.
         This needs more testing.

FEATURE  [FILTERING] Test the filters for errors. For example, test that all the drivers
         defined in <Driver> exist. Another example, test that the genres defined in
         <Genre> and the controls defined in <Controls> exist.

FEATURE  [FILTERING] Warn the user if errors found in the XML filter definition, maybe in
         a report the user can read later.

FEATURE  [FILTERING] Make a filter report the user can read. Now, only the number of machines
         after filtering is reported.

FEATURE  [GRAPHICS] Generate MAME machines and SL items 3D Boxes.

FEATURE  [GRAPHICS] Refactoring of the Fanart and 3D Box code generation. Creation of graphics.py.

FEATURE  [GRAPHICS] Only generate 3D Boxes if both Fyler and Clearlogo (MAME) or Boxfront (SL)
         are present. Avoid having empty 3D boxes.

FEATURE  [CORE] Improved filter "Machines by Display Type" and removed filter
         "Machines by Display Rotation."
