@@ -4,9 +4,11 @@
 
     <setting id="separator" type="lsep" label="Vanilla MAME" />
     <setting label="MAME executable" type="file" id="mame_prog" />
+    <setting label="Enable Software Lists" type="bool" id="enable_SL" default="true" />
 
     <setting id="separator" type="lsep" label="Retroarch MAME 2003 Plus" />
     <setting label="Retroarch executable" type="file" id="retroarch_prog" />
+    <setting label="Libretro path" type="file" id="libretro_dir" />
     <setting label="MAME XML path" type="file" id="xml_2003_path" />
 </category>
 <category label="Optional paths">
